# soilmake

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
